--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,36 +2,76 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Page</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 50px;
-            background-color: #f4f4f9;
-        }
-        h1 {
-            color: #333;
-        }
-        p {
-            font-size: 18px;
-            color: #666;
-        }
-        a {
-            color: #0066cc;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <title>Matreshka</title>
+    <link rel="stylesheet" href="PageHTML/MainPage/MainPage.css">
 </head>
 <body>
-<h1>Welcome to Matruoshka Frontend!</h1>
-<p>If you see this page, your frontend is working correctly.</p>
-<p>
-    Visit our <a href="https://example.com" target="_blank">official website</a> for more details.
-</p>
+<div class="container">
+    <div class="mainLogo">
+        <img src="Assets/image%207.png">
+    </div>
+    <div class="scrollbar">
+        <h1>Look for unique SLAVIC ITEMS</h1>
+        <ul class="img_scroll">
+            <li>
+                <img src="Assets/image%208.png" alt="">
+                <p>Slavic Matryoshka</p>
+            </li>
+            <li>
+                <img src="Assets/photo_5212952414934659072_y%201.png" alt="">
+                <p>Samovar</p>
+            </li>
+            <li>
+                <img src="Assets/image%209.png" alt="">
+                <p>Women's National Cloth</p>
+            </li>
+            <li>
+                <img src="Assets/photo_5212952414934659068_y%201.png" alt="">
+                <p>Faceted Glasses</p>
+            </li>
+        </ul>
+    </div>
+    <div class="mainPageSecond">
+        <img src="Assets/image%2010.png" alt="123">
+    </div>
+    <footer>
+        <ul>
+            <li>
+                <h3>MAY WE HELP YOU</h3>
+                <button>ContactUs</button>
+                <button>MyOrder</button>
+                <button>FAQs</button>
+                <button>Email</button>
+                <button>SiteMap</button>
+            </li>
+            <li><h3>
+                THE COMPANY
+            </h3>
+                <button>AboutGucci</button>
+                <button>Gucci</button>
+                <button>Gucci</button>
+                <button>Careers</button>
+                <button>Legal</button>
+                <button>Privaty Pol</button>
+                <button>Corporate</button>
+            </li>
+            <li>
+                <h3>STORE LOCATO</h3>
+                <form action="get">
+                    <input type="text" placeholder="Country/Region,City,State">
+                    <h3>SIGN UP FOR GUCCI UPDATES</h3>
+                    <div class="privatPol">
+                        <p>events and initiatives. More details on this are provided in our <a href="#">Privacy</a></p>
+                    </div>
+                    <input type="email" value="E-MAil">
+                    <h3>Language</h3>
+                    <button>English</button>
+                    <h3>Country/Region</h3>
+                    <button>Finland</button>
+                </form>
+            </li>
+        </ul>
+    </footer>
+</div>
 </body>
 </html>
